# graspit

./: .astylerc  .gitignore  .travis.yml  CMakeLists.txt  GraspitConfig.cmake.in  GraspitConfigVersion.cmake.in  INSTALL.MinGW.md  LICENSE.txt  Makefile  README.md  README.txt  cgdb_install.txt  graspit-core.pro  graspit-lib-LINUX.pro  graspit-lib-WINDOWS.pro  graspit-test.pro  graspit.pro  graspit.sh  graspitConfig.cmake.in  graspit_launch  mk_linux_template  mk_win.bat  package.xml  qmake_image_collection.cpp  rerun.txt  start_end.txt  static_link_cmd  test.pro
CMakeMacros/: FindBULLET.cmake  FindQhull.cmake  FindSoQt4.cmake
PQP-VCOLLIDE/: Makefile
PQP-VCOLLIDE/PQP_v1.1/: PQP.DSP  PQP.dsw  PQP.ncb  PQP.opt  README.txt  so_locations
PQP-VCOLLIDE/doc/: UserManual
PQP-VCOLLIDE/include/: VCollide.H  VInternal.H  ivcollide.h
PQP-VCOLLIDE/ivcollide/: Makefile  README  ivcollide.cpp  ivcollide.h
PQP-VCOLLIDE/lib/: .placeholder
PQP-VCOLLIDE/src/: AABB.H  EndPoint.H  Makefile  NBody.H  NBody.cpp  PairData.H  PairData.cpp  VCol.h  VCollide.H  VCollide.cpp  VInternal.H  VInternal.cpp
applications/ros_interface/: ros_interface.pro
ci/: install.sh  install_linux.sh  script.sh
cmake/: graspitConfig.cmake
cmdline/: cmdline.h
colladaconverter/: README.txt  colladaconverter.cpp  colladaconverter.h  colladaconverter.vcproj
cpp-argparse/: Makefile  OptionParser.cpp  README.md  test.cpp
doc/: tactile.specs.txt
doc/hyperlatex/: cgdb.tex  cgdb_in_depth.tex  collision.tex  data_files.tex  data_files_bodies.tex  data_files_robots.tex  data_files_worlds.tex  dynamics.tex  gfo.tex  (+16 more)
eigengrids/: dataTypes.h  eigenGridsDlg.cpp  eigenGridsDlg.h  intersection_obb.h  intersection_sphere.h  intersection_triangle.h  octree.h  octreeNodes.h  scanSimDlg.cpp  scanSimDlg.h  testOctree.cpp
experience/: add_all_rock.sql  handpose_cgdb_0.0.txt  handpose_cokecan_gillette_v2.txt  sql.xlsx
fiji/: codebooki00.txt  handpose_cgdb.txt  poseerror.txt  poseerror_physical.txt  test_perturbed_pose.txt  tmp_tactile.txt
hardware/: BarrettHand.cpp  BarrettHand.h  BarrettHandThread.cpp  BarrettHandThread.h  CyberGlove.cpp  CyberGlove.h  Flock.cpp  Flock.h  GloveTrans.cpp  GloveTrans.h  HardwareLib.pro  HardwareLib.vcproj  HardwareTest.vcproj  SerialPort.cpp  SerialPort.h  TX60L.cpp  TX60L.h  flockThread.cpp  flockThread.h  main.cpp  mk_bat.bat
images/: README
include/: ContactPDModels.h  FitParabola.h  SensorInterface.h  SoArrow.h  SoComplexShape.h  SoTorquePointer.h  application.h  arch.h  bBox.h  barrett.h  bbox_inl.h  body.h  bodySensor.h  bulletDynamics.h  contact.h  contactSetting.h  debug.h  defines.h  discretize.h  dlfcn-win32.h  dof.h  dynJoint.h  dynamics.h  eigenGrasp.h  flockTransform.h  gloveInterface.h  grasp.h  graspControllers.h  graspPlanningService.h  graspRecord.h  graspitApp.h  graspitCore.h  graspitGUI.h  graspitParser.h  graspitServer.h  graspitServer.h_old  gws.h  gwsprojection.h  handControlAPI.h  handController.h  (+47 more)
matlab/: connectToServer.c  connectToServer.h  getAverageContacts.c  getBodyName.c  getContacts.c  getDOFVals.c  setDOFVals.c  stepDynamics.c
misc/: functions.txt  license.sh
optimizer/: eigenTorques.cpp  optimizerDlg.ui
ply/: mesh_loader.cpp  mesh_loader.h  ply.c  ply.h
qhull/: Announce.txt  CMakeLists.txt  COPYING.txt  Changes.txt  MBorland  Makefile  README.txt  REGISTER.txt  geom.c  geom.h  geom2.c  global.c  index.htm  io.c  io.h  junk  mem.c  mem.h  merge.c  merge.h  poly.c  poly.h  poly2.c  q_eg  q_egtest  qh-c.htm  qh-eg.htm  qh-faq.htm  qh-impre.htm  qh-in.htm  qh-man.htm  qh-opt.htm  qh-optc.htm  qh-optf.htm  qh-optg.htm  qh-opto.htm  qh-optp.htm  qh-optq.htm  qh-optt.htm  qh-optv.htm  (+19 more)
render_scripts/: depth_frag.glsl  depth_vert.glsl
semantics/: semantics_grasps.txt
src/: ContactPDModels.cpp  SensorInterface.cpp  SoArrow.cpp  SoComplexShape.cpp  SoTorquePointer.cpp  SoftContact.h  application.cpp  arch.cpp  bBox.cpp  barrett.cpp  body.cpp  bodySensor.cpp  bulletDynamics.cpp  contact.cpp  contactSetting.cpp  discretize.cpp  dlfcn-win32.cpp  dof.cpp  dynJoint.cpp  dynamics.cpp  eigenGrasp.cpp  flockTransform.cpp  gloveInterface.cpp  grasp.cpp  graspControllers.cpp  graspPlanningService.cpp  graspRecord.cpp  graspSolver.cpp  graspitApp.cpp  graspitCore.cpp  graspitGUI.cpp  graspitParser.cpp  graspitResources.qrc  graspitServer.cpp  graspitServer.cpp_old  gws.cpp  gwsprojection.cpp  handControlAPI.cpp  headlessIVManager.cpp  humanHand.cpp  (+38 more)
test/: Makefile  eigen_tests.cpp  graspit_collision_tests.cpp  primative_planner_tests.cpp  simple_test.cpp  test  test.pro~  transform_tests.cpp
tinyxml/: tinyxmlparser.cpp
ui/: about.ui  archBuilderDlg.cpp  archBuilderDlg.h  archBuilderDlg.ui  barrettHandDlg.cpp  barrettHandDlg.h  barrettHandDlg.ui  bodyPropDlg.cpp  bodyPropDlg.h  bodyPropDlg.ui  contactExaminerDlg.cpp  contactExaminerDlg.h  contactExaminerDlg.ui  dofControlDlg.cpp  dofControlDlg.h  dofControlDlg.ui  eigenGraspDlg.cpp  eigenGraspDlg.h  eigenGraspDlg.ui  gfoDlg.cpp  gfoDlg.h  gfoDlg.ui  gloveCalibrationDlg.cpp  gloveCalibrationDlg.h  gloveCalibrationDlg.ui  graspCaptureDlg.cpp  graspCaptureDlg.h  graspCaptureDlg.ui  gsaDlg.cpp  gsaDlg.h  gsaDlg.ui  gwsProjDlg.cpp  gwsProjDlg.h  gwsProjDlgBase.ui  mainWindow.cpp  mainWindow.h  mainWindow.ui  qmDlg.cpp  qmDlg.h  qmDlg.ui  (+31 more)
worlds/: HAND_DOODKNOB.xml  HarvardGlassDyn.xml  HarvardGlassDyn2.xml  HarvardGlassDyn3.xml  M7.wld  M7.xml  barretGlassDyn3.xml  barretGlassDyn4.xml  barretGlassDyn5.xml  barretGlassDyn6.xml  barretGlassDyn7.xml  barrettGlassDyn.wld  barrettGlassDyn.xml  barrettGlassDyn2.wld.txt  barrettGlassDyn2.xml  cftest.xml  cvap.wld  cvap.xml  cylinder_slam.xml  demo1207.xml  dlr_flask.wld  dlr_flask.xml  flask_Test.xml  hand_contacts.xml  hands.wld  hands.xml  hc2.xml  jaco_robot_world.xml  kth-columbia-world.xml  mug_world.xml  plannerMug.wld  plannerMug.xml  plannerP51.wld  plannerP51.xml  pringles_bhand.xml  robonautFlask.wld  robonautFlask.xml  robonautPinchGlass.wld  robonautPinchGlass.xml  staubli.xml  (+4 more)
xmlconverter/: xmlconverter.cpp  xmlconverter.h  xmlconverter.pro
(+2510 files in other folders)
